# gdrive-telegram-notifier

./: .gitignore  README.md  pyproject.toml
src/gdrive_telegram_notifier/: __init__.py  auth.py  cli.py  gdrive.py  telegram.py
vars/: uploadAndNotify.groovy
